--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
  "description": "Template for creating Telegram bots",
  "main": "index.js",
  "scripts": {
-  "prettier": "prettier --config prettier-config.json --write src/**/*.ts",
+  "prettier": "prettier --config prettier-config.json --write 'src/**/*.ts'",
   "clean": "rm -rf dist",
   "build": "npm run prettier && npm run clean && tsc --watch false",
   "start": "npm run build && node dist/index.js",
