--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
  },
  "homepage": "https://github.com/vilkup/ts-bot-template#readme",
  "dependencies": {
+   "axios": "^0.19.0",
   "mongoose": "^5.5.2",
   "mongoose-unique-validator": "^2.0.3",
   "simple-node-logger": "^18.12.22",
@@ -28,9 +29,10 @@
   "telegraf-session-mongodb": "^1.1.2"
  },
  "devDependencies": {
+   "@types/axios": "^0.14.0",
   "@types/mongodb": "^3.1.24",
   "@types/mongoose": "^5.3.26",
-  "@types/node": "^11.13.6",
-  "@types/mongoose-unique-validator": "^1.0.1"
+   "@types/mongoose-unique-validator": "^1.0.1",
+   "@types/node": "^11.13.6"
  }
 }
