--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
 	/* Basic Options */
-	"target": "es5",
+    "target": "es6",
 	/* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */
 	"module": "commonjs",
 	/* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
@@ -32,7 +32,7 @@
 	/* Strict Type-Checking Options */
 	"strict": true,
 	/* Enable all strict type-checking options. */
-	"noImplicitAny": true,
+    "noImplicitAny": false,
 	/* Raise error on expressions and declarations with an implied 'any' type. */
 	"strictNullChecks": false,
 	/* Enable strict null checks. */
