--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
  "homepage": "https://github.com/vilkup/ts-bot-template#readme",
  "dependencies": {
   "axios": "^0.19.0",
-  "csv-parser": "^2.3.1",
-  "csv-writer": "^1.5.0",
+  "fast-csv": "^3.4.0",
   "mongoose": "^5.7.6",
   "mongoose-unique-validator": "^2.0.3",
   "simple-node-logger": "^18.12.22",
