--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ install:
 script:
 - npm test
 after_success:
-  - npm run build
-# - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-# - docker build -t kemarskiy/color-pick:1.0 .
-# - docker push kemarskiy/color-pick
+- npm run build
+- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+- docker build -t kemarskiy/telegram-inventory-bot:1.0 .
+- docker push kemarskiy/telegram-inventory-bot
 # before_install:
 # - openssl aes-256-cbc -K $encrypted_8a8f606118a6_key -iv $encrypted_8a8f606118a6_iv
 #   -in deploy_rsa.enc -out deploy_rsa -d
